--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -6,7 +6,30 @@
     padding: 90px 0;
 }
 
+// Effet apparitions cards
 
+.reveal {
+    position: relative;
+    opacity: 0;
+  }
+  .reveal.active {
+    opacity: 1;
+  }
+  
+.active.fade-bottom {
+    animation: fade-bottom 1s ease-in;
+  }
+
+@keyframes fade-bottom {
+    0% {
+      transform: translateY(50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
 
 .cards-container {
     display: flex;
