--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -3,7 +3,6 @@
  justify-content: center;
  align-items: center;
 height: 100vh;
-position: relative;
 background: linear-gradient(to right,rgba(245, 245, 245, 0.765),rgba(245, 245, 245, 0.664)),url(../assets/large-triangles.svg);
 height: calc(100vh - 75px);
 @media (max-width: 900px) {
@@ -13,7 +12,7 @@ position:initial
 
 .text-container {
   color:black;
-  font-size: 3.5em;
+  font-size: 2.8em;
    letter-spacing: 0.10em;
 
 }
@@ -186,7 +185,7 @@ position:initial
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	border: 3px solid rgba(0, 0, 0, 0.564);
+	border: 3px solid rgba(255, 166, 0, 0.543);
 	border-radius: 23px;
 }
 .scroll-btn .mouse > * {
@@ -197,9 +196,15 @@ position:initial
 	width: 8px;
 	height: 8px;
 	margin: -4px 0 0 -4px;
-	background: rgba(0, 0, 0, 0.568);
+	background: rgba(255, 166, 0, 0.598);
 	border-radius: 50%;
 	-webkit-animation: ani-mouse 2.5s linear infinite;
 	-moz-animation: ani-mouse 2.5s linear infinite;
 	animation: ani-mouse 2.5s linear infinite;
+}
+
+.socials {
+	display: flex;
+	justify-content: center;
+	margin-top: 30px;
 }
