--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -34,15 +34,22 @@
 }
 
 .form-container {
-    width: 30%;
+    width: 320px;
+    height: 400px;
     background-color: rgba(10, 1, 111, 0.831);
     border-radius: 10px;
     padding: 40px;
     box-shadow: 10px 10px 13px -7px rgba(0,0,0,0.4);
     @media (max-width: 900px) {
-        width: 80%;
+        width: 60%;
             
         }
+        @media (max-width: 400px) {
+           padding: 20px;
+           height: 350px;
+           width: 90%;
+                
+            }
 }
 
 form {
@@ -59,7 +66,11 @@ form {
     border-radius: 5px;
     outline: none;
     border: none;
-    padding: 10px 5px;
+    padding: 10px 0;
+    @media (max-width: 400px) {
+        height: 150px;
+             
+         }
    
 }
 
@@ -70,8 +81,11 @@ form input {
     box-shadow: 10px 10px 13px -7px rgba(0,0,0,0.1);
     width: 100%;
     height: 50px;
-    padding: 0 5px;
     outline: none;
+    @media (max-width: 400px) {
+        height: 40px;
+             
+         }
 }
 
 
@@ -85,7 +99,7 @@ form input {
 
 
 .submit {
-    width:30%;
+    width:100px;
     display: flex;
     justify-content: center;
     align-self: flex-end;
@@ -98,7 +112,12 @@ form input {
     transition: transform 400ms;
 &:hover {
     transform:scale(1.05);
-   
 }
+
+@media (max-width: 400px) {
+    height: 30px;
+    font-size: 0.9em;
+         
+     }
 }
 
