--- a/src/styles/Socials.scss
+++ b/src/styles/Socials.scss
@@ -3,41 +3,37 @@
   }
   
   .socials-container {
-    position: absolute;
-    background-color: rgba(253, 253, 253, 0.968);
-    width: 70px;
-    height: 270px;
-    left: -5px;
-    top: 33%;
+   background: rgba(256,256,256,0.5);
+    width: 200px;
+    height: 55px;
+    border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column;
     justify-content: center; 
+    align-items: center;
     @media (max-width: 900px) {
-     display: none; // Affiche le menu hamburger
+ 
       }
   }
   
   .buttons-socials {
     display:flex;
-    flex-direction: column;
     align-items: center;
-    gap: 12px;
+    gap: 15px;
+ 
   
   }
   
-  .github {
-    width: 40px;
-    
-    
+  .github, .linkedin, .envelope {
+    width: 30px;
   }
+
   
   .container-git {
-   
     background-color: #fff;
-   width: 50px;
-   height: 50px;
-   border-radius: 50%;
+   width: 40px;
+   height: 40px;
+   border-radius: 10px;
    display: grid;
    place-items: center;
    box-shadow: 0 0 50px 20px rgba(0, 0, 0, .1);
@@ -50,17 +46,13 @@
     }
   }
   
-  .linkedin {
-    width: 40px;
-    
-  }
   
   .container-linkedin {
    
     background-color: #fff;
-   width: 50px;
-   height: 50px;
-   border-radius: 50%;
+   width: 40px;
+   height: 40px;
+   border-radius: 10px;
    display: grid;
    place-items: center;
    box-shadow: 0 0 50px 20px rgba(0, 0, 0, .1);
@@ -71,19 +63,14 @@
     &:hover {
         transform: scale(1.10);
     }
-  }
-  
-  .envelope {
-    width: 40px;
-    
   }
   
   .container-envelope{
    
     background-color: #fff;
-   width: 50px;
-   height: 50px;
-   border-radius: 50%;
+   width: 40px;
+   height: 40px;
+   border-radius: 10px;
    display: grid;
    place-items: center;
    box-shadow: 0 0 50px 20px rgba(0, 0, 0, .1);
