--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,8 +1,8 @@
 .footer {
     display: flex;
     flex-direction: column;
-    background-color: rgb(10, 10, 114);
-    height: 150px;
+    background-color: darkblue;
+    height: 120px;
     color: white;
     font-size: 2em;
     text-align: CENTER;
