--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,5 +1,5 @@
 .about-container {
-    padding: 50px 0;
+    padding: 30px 0;
     background-color: ghostwhite;
  
 }
@@ -33,13 +33,25 @@
     }
 }
 
+.skills-content {
+    padding-top: 20px;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
 .skills {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-
 }
 
+.about-pic {
+    display: flex;
+    justify-content: center;
+    width: 350px;
+    padding-top: 55px;
+}
 
 .square {
     display: inline-block;
@@ -52,19 +64,19 @@
     border-radius: 4px;
     font-size: 1.1em;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
-}
-
-.square:hover {
-    background-color: blue;
+    transition: 0.6s;
+&:hover {
+    background-color: darkblue;
     color: whitesmoke;
-    transition: 0.4s;
+    scale: 1.10;
+}
 }
 
 
 
 
 .presentation {
-    line-height: 1.7;
+    line-height: 1.5;
     text-align: left;
 
 }
