--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -14,6 +14,9 @@ position:initial
   color:black;
   font-size: 2.8em;
    letter-spacing: 0.10em;
+   @media (max-width: 900px) {
+font-size: 2em;
+	}
 
 }
 
