--- a/src/styles/DarkTheme.scss
+++ b/src/styles/DarkTheme.scss
@@ -1,28 +1,62 @@
 .dark-mode {
-$background-color: #000000;
-$text-color: #ffffff;
+$background-color: #1a1625;
+$text-color: whitesmoke;
 
 
-h2, h3, .card-title, nav a, p, .text-container {
-  color: $text-color;
+h2, nav a, p, .text-container {
+  color: whitesmoke
 }
 
+.name, nav a {
+    &:hover {
+      color:  #ba9ffb;
+    }
+}
 
+h3 {
+    color : #a688fa;
+}
+
+.card-title {
+   color: #ba9ffb;
+}
 
 .home {
-    background: url("../assets/subtle-prism.png")
+    background: none;
+    background-color: $background-color;
 }
 
-.firstname {
-    color: aqua;
+.firstname, .cursor {
+    color: #7a5af5
+}
+
+.mouse {
+    border: 3px solid #7a5af5;
+}
+
+.scroll-btn .mouse > * {
+    background-color: #7a5af5;
 }
 
 .underline {
-    border: 4px solid aqua;
+    border: 4px solid #a688fa;
+}
+
+.square {
+    background-color: #908d96;
+    color: $text-color;
+    transition: 0.6s;
+&:hover {
+    background-color: #a688fa;
+}
 }
 
 .button-cv {
-    background-color: rgb(0, 170, 170);
+    background-color: #7a5af5;
+    &:hover {
+        background-color: whitesmoke;
+        color: #7a5af5;
+    }
 }
 
 .contact-block, .about-container, .projects-container, header  {
@@ -35,20 +69,27 @@ h2, h3, .card-title, nav a, p, .text-container {
     color: $text-color;
 }
 
-.underline {
-    background-color: aqua;
+input, .message {
+    background-color: whitesmoke
 }
 
-.card {
-    background-color: rgba(36, 36, 36, 0.03);
+.submit {
+    background-color: #7a5af5;
+    color: $text-color;
 }
+
+.card, .form-container {
+    background-color: #2f2b3a;
+    color: whitesmoke;
+}
+
 
 .tech-logo {
     background-color: rgba(245, 245, 245, 0.945);
 }
 
-.form-container {
-    background-color: rgb(6, 205, 205);
+blink {
+    border-color: whitesmoke;
 }
 
 }
