--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,10 +1,11 @@
 
 .header {
-  
     width: 100%;
     display: flex;
     justify-content: space-between;
-
+    position: fixed;
+    background: white;
+    z-index: 1;
 }
 
 .name {
@@ -24,7 +25,6 @@ cursor: pointer;
     align-items: center;
     font-size: 1.2em;
     font-weight: bold;
-
 }
 
 nav {
@@ -33,12 +33,14 @@ nav {
     align-items: center;
     gap: 20px;
     padding-right: 15px;
+    @media (max-width: 900px) {
+        display: none; // Masque la navigation principale
+    }
 }
 
 nav a {
     color: rgba(0, 0, 0, 0.872);
   font-weight: 600;
- 
     font-size: 1.1em;
     text-transform:uppercase;
     text-decoration: none;
@@ -52,7 +54,6 @@ nav a {
   display: flex;
   gap: 20px;
 }
-
 
 .light-mode {
   display: flex;
@@ -71,11 +72,9 @@ nav a {
     border-radius: 5px;
     padding: 10px;
     transition: transform 400ms;
-
     &:hover{
     transform: scale(1.10);
     color: white;
-    
     }
 }
 
@@ -84,31 +83,19 @@ width: 70px;
 }
 
 
+// Burger menu
 @media (max-width: 900px) {
   .hamburger-menu {
     display: block; 
+    z-index: 1000;
   }
 }
 
-// Burger menu
-
 @media (min-width: 901px) {
     .hamburger-menu {
-      display: none; // Masque le menu hamburger
+      display: none; 
     }
-  
-  }
-
-// Styles pour les écrans de 900px ou moins
-@media (max-width: 900px) {
-    .hamburger-menu {
-      display: block; // Affiche le menu hamburger
-      z-index: 1000;
-    }
-  
-    nav {
-      display: none; // Masque la navigation principale
-    }
+}
 
 
 #menu__toggle {
@@ -161,7 +148,7 @@ width: 70px;
     top: 70px;
     left: 100%;
     width: 100%;
-    height: 20%;
+    height: 100%;
     margin: 0;
     padding: 80px 0;
     list-style: none;
@@ -182,6 +169,5 @@ width: 70px;
     transition-duration: .25s;
   }
   .menu__item:hover {
-    background-color: #CFD8DC;
+    background-color: #cfd8dc30;
   }
-}
