--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
+/* 
 :root {
   --background: white;
   --text-primary: black;
@@ -22,4 +22,4 @@ code {
   --background: black;
   --text-primary: white;
   --text-secondary: grey;
-}
+} */
