--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -49,8 +49,12 @@ align-items: center;
 .about-pic {
     display: flex;
     justify-content: center;
-    width: 350px;
+    width: 330px;
     padding-top: 55px;
+    @media (max-width: 400px) {
+        width: 260px;
+                 
+             }
 }
 
 .square {
@@ -66,13 +70,17 @@ align-items: center;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     transition: 0.6s;
 &:hover {
-    background-color: darkblue;
+    background-color: rgba(0, 0, 139, 0.774);
     color: whitesmoke;
     scale: 1.10;
 }
+
+@media (max-width: 400px) {
+    padding: 10px;
+    font-size: 0.9em;
+             
+         }
 }
-
-
 
 
 .presentation {
