--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -11,14 +11,17 @@ position:initial
 
 .text-container {
   color:black;
-  font-size: 2.8em;
+  font-size: 2.7em;
    letter-spacing: 0.10em;
   
    @media (max-width: 900px) {
-font-size: 2em;
+font-size: 1.8em;
 padding: 0 30px;
-
 	}
+	@media (max-width: 500px) {
+		font-size: 1.2em;
+				 
+			 }
 
 }
 
