Modif socials buttons

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -10,6 +10,21 @@
     align-items: CENTER;
 }
 
+.custom-container-git {
+    // Styles spécifiques à container-git
+    border-radius: 20px;
+  }
+  
+  .custom-container-linkedin {
+    // Styles spécifiques à container-linkedin
+    border-radius: 20px;
+  }
+  
+  .custom-container-envelope {
+    // Styles spécifiques à container-envelope
+    border-radius: 20px;
+  }
+
 .copyright {
     font-size: 0.5em;
     margin-top: 5px;
