--- a/src/styles/Socials.scss
+++ b/src/styles/Socials.scss
@@ -5,7 +5,6 @@
   .socials-container {
     width: 200px;
     height: 55px;
-    border-radius: 10px;
     display: flex;
     justify-content: center; 
     align-items: center;
@@ -27,57 +26,21 @@
   }
 
   
-  .container-git {
+  .container-git, .container-linkedin, .container-envelope {
     background-color: #fff;
-   width: 40px;
-   height: 40px;
-   border-radius: 10px;
-   display: grid;
-   place-items: center;
-   box-shadow: 0 0 50px 20px rgba(0, 0, 0, .1);
-   cursor: pointer;
-   line-height: 1;
-   transition-property: transform;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    display: grid;
+    place-items: center;
+    box-shadow: 0 0 50px 20px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    line-height: 1;
+    transition-property: transform;
     transition-duration: 400ms;
-    &:hover {
-        transform: scale(1.10);
-    }
-  }
   
-  
-  .container-linkedin {
-   
-    background-color: #fff;
-   width: 40px;
-   height: 40px;
-   border-radius: 10px;
-   display: grid;
-   place-items: center;
-   box-shadow: 0 0 50px 20px rgba(0, 0, 0, .1);
-   cursor: pointer;
-   line-height: 1;
-   transition-property: transform;
-    transition-duration: 400ms;
     &:hover {
-        transform: scale(1.10);
-    }
-  }
-  
-  .container-envelope{
-   
-    background-color: #fff;
-   width: 40px;
-   height: 40px;
-   border-radius: 10px;
-   display: grid;
-   place-items: center;
-   box-shadow: 0 0 50px 20px rgba(0, 0, 0, .1);
-   cursor: pointer;
-   line-height: 1;
-   transition-property: transform;
-    transition-duration: 400ms;
-    &:hover {
-        transform: scale(1.10);
+      transform: scale(1.10);
     }
   }
   
