--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -51,9 +51,9 @@
  display: none;
  gap: 30px;
   position: absolute;
-  top: 50%; /* Center the icons vertically */
-  left: 50%; /* Center the icons horizontally */
-  transform: translate(-50%, -50%); /* Center the icons precisely */
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
 
 }
 
