--- a/src/styles/Socials.scss
+++ b/src/styles/Socials.scss
@@ -8,8 +8,9 @@
     display: flex;
     justify-content: center; 
     align-items: center;
-    @media (max-width: 900px) {
- 
+    @media (max-width: 500px) {
+      width: 150px;
+      height: 25px;
       }
   }
   
